@@ -2196,6 +2196,8 @@ roles.superadmin=Superadmin role
 roles.cannotAlterSuperadminRole=Unable to alter default superadmin role
 roles.user=User role
 roles.cannotAlterUserRole=Unable to alter default user role
+roles.anonymous=Anonymous role
+roles.cannotAlterAnonymousRole=Unable to alter default anonymous role
 roles.roleNotFound=Role ''{0}'' not found
 roles.roleAlreadyAssignedToPermission=Role {0} is alreay assigned to the {1} permission
 roles.roleAlreadyAssignedToPermissionOnType=Role {0} is alreay assigned to the {1} permission on {2}
@@ -2448,6 +2450,8 @@ permission.exception.editDataSource=User ''{0}'' does not have edit permission f
 permission.exception.readDataSource=User ''{0}'' does not have read permission for the data source
 permission.exception.editAnyDataSource=User ''{0}'' does not have permission to edit any data source
 permission.exception.event=User ''{0}'' does not have permission for the event
+permission.exception.noAuthenticationSet=No authentication set in security context
+permission.exception.invalidAuthenticationPrinciple=Authentication principle not a Mango Permission Holder
 
 permission.script.nashorn=Use the Nashorn JavaScript engine
 permission.script.unknown=Use an unknown script engine
