@@ -28,6 +28,7 @@
 * Change disk space monitoring metrics to report GB rather than bytes
 * Add more monitored values to monitor server hardware performance and various disk partition sizes in GB
 * Add free form JSON data field to event detectors to allow storage of custom data in the configuration
+* Add anonymous role for public access to public file store
 
 *Version 3.7.4*
 * Improve work item failure logging
